fix long video crash

--- a/test handler.ipynb
+++ b/test handler.ipynb
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MoviePy - Writing audio in /usr/src/app/tmp/test_0.mp3\n"
+      "MoviePy - Writing audio in /Users/cheena/PycharmProjects/leadersofdigital_rbc/tmp/test_0_0.mp3\n"
      ]
     },
     {
@@ -37,12 +37,42 @@
      "output_type": "stream",
      "text": [
       "MoviePy - Done.\n",
-      "[{'path': '/usr/src/app/tmp/test_0.mp3', 'transcription': 'МОЩНЫЙ ВЗРЫВ В ЦЕНТРЕ МЮНКИНА ЧЕТЫРЕ ЧЕЛОВЕКА ПОСТРАДАЛИ ОДИН В ТЯЖЕЛОМ СОСТОЯНИИ СДЕТОНИРОВАЛА АБИАБОМБА ВРЕМЁН ВТОРОЙ МИРОВОЙ ВОЙНЫ НАСТРОЙ ПЛОЩАДКЕ НЕДАЛЕКО ОТ ГЛАВНОГО ЖИЗНЬ ДОРОЖНОГО ВОКЗАЛА БАВАРСКОЙ СТОЛИЦЕ ВЕСОМ ДВЕСТИ ПЯТЬДЕСЯТ КИЛОГРАММОВ СТРОИТЕЛЕЙ НАТКНУЛИСЬ НА НЕЁ ВО ВРЕМЯ БУРЕНИЯ ДВИЖЕНИЯ ПОЕЗДУВ В ЭТОМ РАЙОНЕ ПРИОСТАНОВЛЕНА ПОЛИЦИЯ ЦЕПИЛА ТЕРРИТОРИЮ ПОЧЕМУ БУМ БУ НЕТ НАРУЖИЛИ ДО НАЧАЛА РАБОТ СЕЙЧАС ВЫЯСНЯЮТ'}]\n"
+      "MoviePy - Writing audio in /Users/cheena/PycharmProjects/leadersofdigital_rbc/tmp/test_0_1.mp3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                                                      \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done.\n",
+      "MoviePy - Writing audio in /Users/cheena/PycharmProjects/leadersofdigital_rbc/tmp/test_0_2.mp3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                                                      \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoviePy - Done.\n",
+      "[{'path': '/Users/cheena/PycharmProjects/leadersofdigital_rbc/tmp/test_0_0.mp3', 'transcription': 'СЯ ВОЗМОЖНОМО ВОДЕ РОССИЙСКИ КВОЯСНОУКРАИНЫ ГОВОРИЛИ ЕЩЕ В НАЧАЛЕ ГОДА НО И ПРОВОДИЛИ УЧЕНИЯ ЗАПАД ДВАДЦА ОДИН НО КАК ВИДИМ ЭТОГО НЕ СЛУЧИЛОСЬ ДЕЛО НЕ В ТОМ ЧТОБЫ ВВОДИТЬ ТАМ ВОЙСКОНЕ ВВОДИТЬ ВОЕВАТНЕ ВОЕВАТЬ А ДЕЛО В ТОМ ЧТОБЫ НАЛАДИТЬ ОТНОШЕНИЯ П ПО СОЗДАНИЮ М БОЛЕЕ СПРАВЕДЛИВОГО УСТОЙЧИВОГО РАЗВИТИЯ И НА И УЧЕТЫ ИНТЕРЕСАХ В ОБЛАСТИ БЕЗОПАСНОСТИ ВСЕХ УЧАСТНИКОВ МЕЖДУНАРОДНОЙ ДЕЯТЕЛЬНОСТИ ВОТ ЕСЛИ МЫ БУДЕМ ИСКРЕННИК ЭТОМУ СТРЕМИТЬСЯ ТО НИКАКИХ УГРОЗ НИКТО НЕ БУДЕТ ИСПЫТЫВАТЬ ЧТО КАСАЕТСЯ УГРОЗ ТО ДЛЯ ЛЮДЕЙ ПРОЖИВАЮЩИХ В ДВУХ НЕПРИЗНЫХ ПОКА РЕСПУБЛИКАХ ЛОНЫРДАНЫЕ А ТАМ ТОЖЕ ВЕ СОЗДАЮТСЯ ПОСТОЯННОЙ УГРОЗЫ ПРИ ПРИДВИЖЕНИЕ  ВОЙСКОВЫХ СОЕДИНЕНИЕ В БЛИЗИЯ ИХ ТЕРРИТОРИИ ЭТО КАК ВО-ВТОРЫХ  В-ТРЕТЬИХ РОССИЙСКОЙ ФЕДЕРАЦИИ ТАКЖЕ ИСПЫТЫВАЕТ ОПРЕДЕЛЕННЫЕ А ОПРЕДЕЛЕННЫЕ ОЗАБОЧЕННОСТИ СВЯЗИ С ТЕМ ЧТО ВОЗЛЕ ЕЕ ГРАНИЦ ПРОВОЕТСЯ КРУПНОМАСШТАБНОЕ УЧЕНИЕ В ТОМ ЧИСЛЕ НЕЗАПЛАНИРОВАННЫЕ КАК ЭТО БЫЛО СОВСЕМ НЕДАВНО В ЧЕРНОМ МУРЕ КОГДА  В ДВАДЦАТИ КИЛОМЕТРАХ ОТ НАШЕЙ ГРАНИЦЫ НАЛЕТАЛИ СТРАТЕГИЧЕСКИМ БОМАРДИРОВЩИКИ КОТОРЫЕ МОГУТ КАК ИЗВЕСТНО ОБЛАДАТЬЬНОЙ КОТОРЫЕ НА ПОРТУ КОТОРЫХ НАХОДИТСЯ ВЫСОКОТОЧНОЕ ОРУЖИЕ МОЖЕТ НАХОДИТЬСЯ И ЯДЕРНОЕ ОРУЖИЕ ВЕДЬ ЭТО ВСЁ СОДАЮТ УГРОЗУ ДЛЯ НАС ТЕПЕРЬ ПО ПОВОДУ КРАСНЫХ ЛИНИ ОНИ В ИЗВЕСТНО СТЕПЕНИ НОСЯТ УМОЗРИТЕЛЬНОЙ ХАРАКТЕР ТЕМ НЕ МЕНЕЕ ПОСМОТРИТЕ ЧТО ПРОИСХОДИЛ НА ПРОТЯЖЕНИЕ ПРЕДЫДУЩИХ ДВАДЦАТЬИСЛИШНОМ ЛЕТ  ОТНОШЕНИЯ МЕЖДУ РОССИЕЙ И ЗАПАТНЫМ СООБЩЕСТВОМ ТАК КОЛЛЕКТИВНЫМ ЗАПАТОМ В ДЕВЯНОСТЫЕ ГОДЫ НАЧАЛЕ ДВУХ ТЫЧНЫХ БЫЛИ ПРАКТИЧЕСКИ БЕЗОБЛОЧНЫМИ  ЗАЧЕМ ПОТРЕБОВАЛОСЬ'}, {'path': '/Users/cheena/PycharmProjects/leadersofdigital_rbc/tmp/test_0_1.mp3', 'transcription': 'РАСШИРЯТЬ НАДО К НАШЕМ ГРАНИЦЕ  НУ ЗАЧЕМ  ВОТ КТО МОЖЕТ ОТВЕТИТЬ НА ЭТОТ ВОПРОС  ОТВЕТА ЗДРАВОМ НЕТ НЕ СУЩЕСТВУЮ У НАС БЫЛО ПОЧТИ ИДЕЛИЧЕСКАЯ КАРТИНА ВЗАИМООТНОШЕНИЯ  ОСОБЕННО В СЕРЕДИНИИ ДВЯНАСАТЫХ ГОДУ  МЫ БЫЛИ ПОЧТИСОЮЗНИКАМИ  НЕТ  НЕСМОТРЯ И НА НАШЕ ПРЕДУПРЕЖДЕНИЯ НЕСМОТРЯ НА НАШИ РАЗГОВОРЫ ПРУВОСЬ БЫ ЧТО-ТАКИ ИНФРАСТРУКТУРА ПОДОШЛА К НАШЕМ ГРАНИЦ ДЕЛО ДОШЛО ДЛО ТОГО ЧТО В ПОЛЬШЕЕ РУМЫНИЯ РАЗМЕЩЕНЫ ТЕПЕРЬ СИСТЕМЫ ПРОТИВ РАКЕТНОЙ ОБОРОНЫ  А ПУСКОВЫЕ УСТАНОВКЕ КОТОРЫЕ ТАМ СТОЯТ М-КОСОРОК ОДИН  НА НИХ МОГУТ БЫТЬ ПОСТАВЛННЫЕ ТАМОГАВКЕ УДАРНОЙ СИСТЕМЫ  НО ЭТО ЖЕ СТОИТ ЛЬНОС УГРОЗЫ  НО ЭТО ЖЕ ОЧЕВИДНОЯ ФАКТ  ОЧЕВИДНЫЙ ВЕЩЬ НА ВСЕ НАШИ УГОВОРЫ  ПРОСЬБЫ НЕ ДЕЛАТЕ ЭТОГО  ЧТО ПРОИЗОШЛО ТО ЧТО МЫ СЕЙЧАС ВИДИМ  В ОТВЕТ МЫ ВЫ НУЖДЕНЫ БЫЛИ ХОЧУТО ПОДЧЕРКНУТЬ ВЫНУЖДЕН БЫЛИ НАЧАТЬ РАЗРАБОТКЕ ГИПЕРЗБУКОВО ОРУЖИЯ  ЭТО НАШ ОТВЕТ  НЕ Ы ЖЕ ЭТО СДЕЛАЛИ  НАЧАЛО  ЗНАЧАЛО НАШИ ПАРТНЕРЫ ВЫШЛИ ИС ДОГОВОРЫ ПОПРОГ ПОТОМ ИЗ ДОГОВОРА ПО РАКЕНУ СРЕДНЕЙ ДАЛЬНОСТЬ  ТЕПЕРЬ В СПРОСИЛИ ПРООКРОВИН ГДЕ ЭТИ КРАСНЫЕ ЛЕНИ  ЭТО ЭТО ПРЕЖДЕ ВСЕГО СОЗДАНИЕ УГРОЗ ДЛЯ НАС КОТОРЫЕ МОГУТ ИСХОДИТЬ С ЭТОЙ ТЕРРИТОРИИ ЕСЛИ И ДАЧУ ВСЕ БУДЕТ РАСШИРЯТЬСЯ В ЭТОЙ ИНФРАСТРУКТУРЫ  ТО Я УЖЕ ПУБЛИЧНО ГОВОРИЛ НО  В ЛЮДИ ДЕЛОВЫ ПОМОЖЕТ БЫТЬ НЕКОТО ЗА ЭТИМ СЛЕДИТЬ НО Я ПОВТОРЮ ЕЩЕ РАЗ НАЧЕТ ЕСЛИ НА ТЕРРИТОРИЯ В УКРАИНА ВОЗНИКНУТ КОМПЛЕКСА КАКИЕ-ТО УДАРНЫЕ  ПОДЛЕТНОЕ ВРЕМЯ ДОМАТСКВЫ БУДЕТ НАЧЕТ ТАМ СЕМЬ ДЕСЯТЬ А В СЛУЧИ РАЗМЕЩЕНИЯ ГИПЕРЗВУКОВО ОРУЖИЕ ПЯТЬ МИНУТ ВОТ ПРЕДЕА'}, {'path': '/Users/cheena/PycharmProjects/leadersofdigital_rbc/tmp/test_0_2.mp3', 'transcription': 'СЕ ВЫ ЧТО ТЫ В МОСКВЕ ЖИВЕТЬ ДА ЭТАК ПОНИМА ИЗ ПИТОЛ МОСКВА ДО  ДО МОРСКВЫ БЫЕТ ПОДЛЕТ НО ВРЕМЯ БДЖЯТЬ БУЖЕМ ХОЧАНСКИ ОТМОСКЕ ПОЧИТСАОЛЯСДЕЛНАДО НО О НАМ ЧТО ДЕЛАТЬ МЫ ТОГДА ДОЛЖНЫ БУДЕМ ЧТО-ТО ПОДОБНОЕ СОЗДАТЬ В ОТНОШЕНИИ ТЕХ КТО НАМ ТАК УГРОЖАЕТПРЕДСТАВЛЯЕТЕЛЬ А МЫ МОЖЕМ ЭТО СДЕЛАТЬ У УЖЕ СЕЙЧАС ПОТОМУ ЧТО МЫ СЕЙЧАС ИСПЫТАЛИ И УСПЕШНО И НАЧАЛА ГОДА У НАС БУЛУТ НА ВООРУЖЕНИ МЕЖДУ НОВОЕ РАКЕТА МОРСКОВОГО БАЗИРОВАНГ ПЕРОЗВУКОВОЕ ДЕВЯТЬ МАХА ПОДВЕТНОЕ ВРЕМЯ БУДЕТ ДО ТЕ КТО ОТДАЕТ ПРИКАЗА ТОЖЕ ПЯТЬ МИНУТ МЫ КУДА ИДЕМ-ТО ЗАЧЕМ ЭТО ВСЁ-ТО ДЕЛО ВОТ ЭТО СОЗДАНИЕ ТАКИХ УГРОЗ ДЛЯ НАС И ЕСТЬ КРАСНЫЕ ЛЕВНИ НО Я НАДЕЮСЬ ЧТО ДО ЭТОГО НЕ ДОЙДЕТ НАДЕЮСЬ ЧТО А ЧУВСТВО ЗДРАВОГО СМЫСЛА ТАК И ОТЪЕТСТВЕННОСТИ И ЗА СВОЕЙ СТРОНЫ ЗАМИРОВОЕ СООБЩЕСТВО ЧТО-ТАКИ БУДЕТ ПРЯ ПРЕОБЛАДАТЬ'}]\n"
      ]
     }
    ],
    "source": [
-    "video_path = 'test_videos/test.mp4'\n",
+    "video_path = 'test_videos/long_test.mp4'\n",
     "\n",
     "with open(video_path, \"rb\") as file:\n",
     "    vid_bytes = file.read()\n",
@@ -52,6 +82,37 @@
     "\n",
     "transcrypt = transcrypt_handler.handle(vid_bytes, vid_id)\n",
     "print(transcrypt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "309dc76d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = \"\".join([i['transcription'] for i in transcrypt])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1efa3eaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'СЯ ВОЗМОЖНОМО ВОДЕ РОССИЙСКИ КВОЯСНОУКРАИНЫ ГОВОРИЛИ ЕЩЕ В НАЧАЛЕ ГОДА НО И ПРОВОДИЛИ УЧЕНИЯ ЗАПАД ДВАДЦА ОДИН НО КАК ВИДИМ ЭТОГО НЕ СЛУЧИЛОСЬ ДЕЛО НЕ В ТОМ ЧТОБЫ ВВОДИТЬ ТАМ ВОЙСКОНЕ ВВОДИТЬ ВОЕВАТНЕ ВОЕВАТЬ А ДЕЛО В ТОМ ЧТОБЫ НАЛАДИТЬ ОТНОШЕНИЯ П ПО СОЗДАНИЮ М БОЛЕЕ СПРАВЕДЛИВОГО УСТОЙЧИВОГО РАЗВИТИЯ И НА И УЧЕТЫ ИНТЕРЕСАХ В ОБЛАСТИ БЕЗОПАСНОСТИ ВСЕХ УЧАСТНИКОВ МЕЖДУНАРОДНОЙ ДЕЯТЕЛЬНОСТИ ВОТ ЕСЛИ МЫ БУДЕМ ИСКРЕННИК ЭТОМУ СТРЕМИТЬСЯ ТО НИКАКИХ УГРОЗ НИКТО НЕ БУДЕТ ИСПЫТЫВАТЬ ЧТО КАСАЕТСЯ УГРОЗ ТО ДЛЯ ЛЮДЕЙ ПРОЖИВАЮЩИХ В ДВУХ НЕПРИЗНЫХ ПОКА РЕСПУБЛИКАХ ЛОНЫРДАНЫЕ А ТАМ ТОЖЕ ВЕ СОЗДАЮТСЯ ПОСТОЯННОЙ УГРОЗЫ ПРИ ПРИДВИЖЕНИЕ  ВОЙСКОВЫХ СОЕДИНЕНИЕ В БЛИЗИЯ ИХ ТЕРРИТОРИИ ЭТО КАК ВО-ВТОРЫХ  В-ТРЕТЬИХ РОССИЙСКОЙ ФЕДЕРАЦИИ ТАКЖЕ ИСПЫТЫВАЕТ ОПРЕДЕЛЕННЫЕ А ОПРЕДЕЛЕННЫЕ ОЗАБОЧЕННОСТИ СВЯЗИ С ТЕМ ЧТО ВОЗЛЕ ЕЕ ГРАНИЦ ПРОВОЕТСЯ КРУПНОМАСШТАБНОЕ УЧЕНИЕ В ТОМ ЧИСЛЕ НЕЗАПЛАНИРОВАННЫЕ КАК ЭТО БЫЛО СОВСЕМ НЕДАВНО В ЧЕРНОМ МУРЕ КОГДА  В ДВАДЦАТИ КИЛОМЕТРАХ ОТ НАШЕЙ ГРАНИЦЫ НАЛЕТАЛИ СТРАТЕГИЧЕСКИМ БОМАРДИРОВЩИКИ КОТОРЫЕ МОГУТ КАК ИЗВЕСТНО ОБЛАДАТЬЬНОЙ КОТОРЫЕ НА ПОРТУ КОТОРЫХ НАХОДИТСЯ ВЫСОКОТОЧНОЕ ОРУЖИЕ МОЖЕТ НАХОДИТЬСЯ И ЯДЕРНОЕ ОРУЖИЕ ВЕДЬ ЭТО ВСЁ СОДАЮТ УГРОЗУ ДЛЯ НАС ТЕПЕРЬ ПО ПОВОДУ КРАСНЫХ ЛИНИ ОНИ В ИЗВЕСТНО СТЕПЕНИ НОСЯТ УМОЗРИТЕЛЬНОЙ ХАРАКТЕР ТЕМ НЕ МЕНЕЕ ПОСМОТРИТЕ ЧТО ПРОИСХОДИЛ НА ПРОТЯЖЕНИЕ ПРЕДЫДУЩИХ ДВАДЦАТЬИСЛИШНОМ ЛЕТ  ОТНОШЕНИЯ МЕЖДУ РОССИЕЙ И ЗАПАТНЫМ СООБЩЕСТВОМ ТАК КОЛЛЕКТИВНЫМ ЗАПАТОМ В ДЕВЯНОСТЫЕ ГОДЫ НАЧАЛЕ ДВУХ ТЫЧНЫХ БЫЛИ ПРАКТИЧЕСКИ БЕЗОБЛОЧНЫМИ  ЗАЧЕМ ПОТРЕБОВАЛОСЬРАСШИРЯТЬ НАДО К НАШЕМ ГРАНИЦЕ  НУ ЗАЧЕМ  ВОТ КТО МОЖЕТ ОТВЕТИТЬ НА ЭТОТ ВОПРОС  ОТВЕТА ЗДРАВОМ НЕТ НЕ СУЩЕСТВУЮ У НАС БЫЛО ПОЧТИ ИДЕЛИЧЕСКАЯ КАРТИНА ВЗАИМООТНОШЕНИЯ  ОСОБЕННО В СЕРЕДИНИИ ДВЯНАСАТЫХ ГОДУ  МЫ БЫЛИ ПОЧТИСОЮЗНИКАМИ  НЕТ  НЕСМОТРЯ И НА НАШЕ ПРЕДУПРЕЖДЕНИЯ НЕСМОТРЯ НА НАШИ РАЗГОВОРЫ ПРУВОСЬ БЫ ЧТО-ТАКИ ИНФРАСТРУКТУРА ПОДОШЛА К НАШЕМ ГРАНИЦ ДЕЛО ДОШЛО ДЛО ТОГО ЧТО В ПОЛЬШЕЕ РУМЫНИЯ РАЗМЕЩЕНЫ ТЕПЕРЬ СИСТЕМЫ ПРОТИВ РАКЕТНОЙ ОБОРОНЫ  А ПУСКОВЫЕ УСТАНОВКЕ КОТОРЫЕ ТАМ СТОЯТ М-КОСОРОК ОДИН  НА НИХ МОГУТ БЫТЬ ПОСТАВЛННЫЕ ТАМОГАВКЕ УДАРНОЙ СИСТЕМЫ  НО ЭТО ЖЕ СТОИТ ЛЬНОС УГРОЗЫ  НО ЭТО ЖЕ ОЧЕВИДНОЯ ФАКТ  ОЧЕВИДНЫЙ ВЕЩЬ НА ВСЕ НАШИ УГОВОРЫ  ПРОСЬБЫ НЕ ДЕЛАТЕ ЭТОГО  ЧТО ПРОИЗОШЛО ТО ЧТО МЫ СЕЙЧАС ВИДИМ  В ОТВЕТ МЫ ВЫ НУЖДЕНЫ БЫЛИ ХОЧУТО ПОДЧЕРКНУТЬ ВЫНУЖДЕН БЫЛИ НАЧАТЬ РАЗРАБОТКЕ ГИПЕРЗБУКОВО ОРУЖИЯ  ЭТО НАШ ОТВЕТ  НЕ Ы ЖЕ ЭТО СДЕЛАЛИ  НАЧАЛО  ЗНАЧАЛО НАШИ ПАРТНЕРЫ ВЫШЛИ ИС ДОГОВОРЫ ПОПРОГ ПОТОМ ИЗ ДОГОВОРА ПО РАКЕНУ СРЕДНЕЙ ДАЛЬНОСТЬ  ТЕПЕРЬ В СПРОСИЛИ ПРООКРОВИН ГДЕ ЭТИ КРАСНЫЕ ЛЕНИ  ЭТО ЭТО ПРЕЖДЕ ВСЕГО СОЗДАНИЕ УГРОЗ ДЛЯ НАС КОТОРЫЕ МОГУТ ИСХОДИТЬ С ЭТОЙ ТЕРРИТОРИИ ЕСЛИ И ДАЧУ ВСЕ БУДЕТ РАСШИРЯТЬСЯ В ЭТОЙ ИНФРАСТРУКТУРЫ  ТО Я УЖЕ ПУБЛИЧНО ГОВОРИЛ НО  В ЛЮДИ ДЕЛОВЫ ПОМОЖЕТ БЫТЬ НЕКОТО ЗА ЭТИМ СЛЕДИТЬ НО Я ПОВТОРЮ ЕЩЕ РАЗ НАЧЕТ ЕСЛИ НА ТЕРРИТОРИЯ В УКРАИНА ВОЗНИКНУТ КОМПЛЕКСА КАКИЕ-ТО УДАРНЫЕ  ПОДЛЕТНОЕ ВРЕМЯ ДОМАТСКВЫ БУДЕТ НАЧЕТ ТАМ СЕМЬ ДЕСЯТЬ А В СЛУЧИ РАЗМЕЩЕНИЯ ГИПЕРЗВУКОВО ОРУЖИЕ ПЯТЬ МИНУТ ВОТ ПРЕДЕАСЕ ВЫ ЧТО ТЫ В МОСКВЕ ЖИВЕТЬ ДА ЭТАК ПОНИМА ИЗ ПИТОЛ МОСКВА ДО  ДО МОРСКВЫ БЫЕТ ПОДЛЕТ НО ВРЕМЯ БДЖЯТЬ БУЖЕМ ХОЧАНСКИ ОТМОСКЕ ПОЧИТСАОЛЯСДЕЛНАДО НО О НАМ ЧТО ДЕЛАТЬ МЫ ТОГДА ДОЛЖНЫ БУДЕМ ЧТО-ТО ПОДОБНОЕ СОЗДАТЬ В ОТНОШЕНИИ ТЕХ КТО НАМ ТАК УГРОЖАЕТПРЕДСТАВЛЯЕТЕЛЬ А МЫ МОЖЕМ ЭТО СДЕЛАТЬ У УЖЕ СЕЙЧАС ПОТОМУ ЧТО МЫ СЕЙЧАС ИСПЫТАЛИ И УСПЕШНО И НАЧАЛА ГОДА У НАС БУЛУТ НА ВООРУЖЕНИ МЕЖДУ НОВОЕ РАКЕТА МОРСКОВОГО БАЗИРОВАНГ ПЕРОЗВУКОВОЕ ДЕВЯТЬ МАХА ПОДВЕТНОЕ ВРЕМЯ БУДЕТ ДО ТЕ КТО ОТДАЕТ ПРИКАЗА ТОЖЕ ПЯТЬ МИНУТ МЫ КУДА ИДЕМ-ТО ЗАЧЕМ ЭТО ВСЁ-ТО ДЕЛО ВОТ ЭТО СОЗДАНИЕ ТАКИХ УГРОЗ ДЛЯ НАС И ЕСТЬ КРАСНЫЕ ЛЕВНИ НО Я НАДЕЮСЬ ЧТО ДО ЭТОГО НЕ ДОЙДЕТ НАДЕЮСЬ ЧТО А ЧУВСТВО ЗДРАВОГО СМЫСЛА ТАК И ОТЪЕТСТВЕННОСТИ И ЗА СВОЕЙ СТРОНЫ ЗАМИРОВОЕ СООБЩЕСТВО ЧТО-ТАКИ БУДЕТ ПРЯ ПРЕОБЛАДАТЬ'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
    ]
   },
   {
@@ -657,8 +718,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2a645088",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "120\n",
+      "240\n",
+      "360\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0, 400, 120):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "939bfa0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from math import ceil\n",
+    "ceil(2.4920833333333334)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50b4011d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -680,7 +785,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
