deep pavlov spell checker

--- a/test handler.ipynb
+++ b/test handler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a20ad81d",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MoviePy - Writing audio in /Users/cheena/PycharmProjects/leadersofdigital_rbc/tmp/test_0_0.mp3\n"
+      "MoviePy - Writing audio in /usr/src/app/tmp/test_0_0.mp3\n"
      ]
     },
     {
@@ -37,42 +37,12 @@
      "output_type": "stream",
      "text": [
       "MoviePy - Done.\n",
-      "MoviePy - Writing audio in /Users/cheena/PycharmProjects/leadersofdigital_rbc/tmp/test_0_1.mp3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                                                      \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MoviePy - Done.\n",
-      "MoviePy - Writing audio in /Users/cheena/PycharmProjects/leadersofdigital_rbc/tmp/test_0_2.mp3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                                                      \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MoviePy - Done.\n",
-      "[{'path': '/Users/cheena/PycharmProjects/leadersofdigital_rbc/tmp/test_0_0.mp3', 'transcription': 'СЯ ВОЗМОЖНОМО ВОДЕ РОССИЙСКИ КВОЯСНОУКРАИНЫ ГОВОРИЛИ ЕЩЕ В НАЧАЛЕ ГОДА НО И ПРОВОДИЛИ УЧЕНИЯ ЗАПАД ДВАДЦА ОДИН НО КАК ВИДИМ ЭТОГО НЕ СЛУЧИЛОСЬ ДЕЛО НЕ В ТОМ ЧТОБЫ ВВОДИТЬ ТАМ ВОЙСКОНЕ ВВОДИТЬ ВОЕВАТНЕ ВОЕВАТЬ А ДЕЛО В ТОМ ЧТОБЫ НАЛАДИТЬ ОТНОШЕНИЯ П ПО СОЗДАНИЮ М БОЛЕЕ СПРАВЕДЛИВОГО УСТОЙЧИВОГО РАЗВИТИЯ И НА И УЧЕТЫ ИНТЕРЕСАХ В ОБЛАСТИ БЕЗОПАСНОСТИ ВСЕХ УЧАСТНИКОВ МЕЖДУНАРОДНОЙ ДЕЯТЕЛЬНОСТИ ВОТ ЕСЛИ МЫ БУДЕМ ИСКРЕННИК ЭТОМУ СТРЕМИТЬСЯ ТО НИКАКИХ УГРОЗ НИКТО НЕ БУДЕТ ИСПЫТЫВАТЬ ЧТО КАСАЕТСЯ УГРОЗ ТО ДЛЯ ЛЮДЕЙ ПРОЖИВАЮЩИХ В ДВУХ НЕПРИЗНЫХ ПОКА РЕСПУБЛИКАХ ЛОНЫРДАНЫЕ А ТАМ ТОЖЕ ВЕ СОЗДАЮТСЯ ПОСТОЯННОЙ УГРОЗЫ ПРИ ПРИДВИЖЕНИЕ  ВОЙСКОВЫХ СОЕДИНЕНИЕ В БЛИЗИЯ ИХ ТЕРРИТОРИИ ЭТО КАК ВО-ВТОРЫХ  В-ТРЕТЬИХ РОССИЙСКОЙ ФЕДЕРАЦИИ ТАКЖЕ ИСПЫТЫВАЕТ ОПРЕДЕЛЕННЫЕ А ОПРЕДЕЛЕННЫЕ ОЗАБОЧЕННОСТИ СВЯЗИ С ТЕМ ЧТО ВОЗЛЕ ЕЕ ГРАНИЦ ПРОВОЕТСЯ КРУПНОМАСШТАБНОЕ УЧЕНИЕ В ТОМ ЧИСЛЕ НЕЗАПЛАНИРОВАННЫЕ КАК ЭТО БЫЛО СОВСЕМ НЕДАВНО В ЧЕРНОМ МУРЕ КОГДА  В ДВАДЦАТИ КИЛОМЕТРАХ ОТ НАШЕЙ ГРАНИЦЫ НАЛЕТАЛИ СТРАТЕГИЧЕСКИМ БОМАРДИРОВЩИКИ КОТОРЫЕ МОГУТ КАК ИЗВЕСТНО ОБЛАДАТЬЬНОЙ КОТОРЫЕ НА ПОРТУ КОТОРЫХ НАХОДИТСЯ ВЫСОКОТОЧНОЕ ОРУЖИЕ МОЖЕТ НАХОДИТЬСЯ И ЯДЕРНОЕ ОРУЖИЕ ВЕДЬ ЭТО ВСЁ СОДАЮТ УГРОЗУ ДЛЯ НАС ТЕПЕРЬ ПО ПОВОДУ КРАСНЫХ ЛИНИ ОНИ В ИЗВЕСТНО СТЕПЕНИ НОСЯТ УМОЗРИТЕЛЬНОЙ ХАРАКТЕР ТЕМ НЕ МЕНЕЕ ПОСМОТРИТЕ ЧТО ПРОИСХОДИЛ НА ПРОТЯЖЕНИЕ ПРЕДЫДУЩИХ ДВАДЦАТЬИСЛИШНОМ ЛЕТ  ОТНОШЕНИЯ МЕЖДУ РОССИЕЙ И ЗАПАТНЫМ СООБЩЕСТВОМ ТАК КОЛЛЕКТИВНЫМ ЗАПАТОМ В ДЕВЯНОСТЫЕ ГОДЫ НАЧАЛЕ ДВУХ ТЫЧНЫХ БЫЛИ ПРАКТИЧЕСКИ БЕЗОБЛОЧНЫМИ  ЗАЧЕМ ПОТРЕБОВАЛОСЬ'}, {'path': '/Users/cheena/PycharmProjects/leadersofdigital_rbc/tmp/test_0_1.mp3', 'transcription': 'РАСШИРЯТЬ НАДО К НАШЕМ ГРАНИЦЕ  НУ ЗАЧЕМ  ВОТ КТО МОЖЕТ ОТВЕТИТЬ НА ЭТОТ ВОПРОС  ОТВЕТА ЗДРАВОМ НЕТ НЕ СУЩЕСТВУЮ У НАС БЫЛО ПОЧТИ ИДЕЛИЧЕСКАЯ КАРТИНА ВЗАИМООТНОШЕНИЯ  ОСОБЕННО В СЕРЕДИНИИ ДВЯНАСАТЫХ ГОДУ  МЫ БЫЛИ ПОЧТИСОЮЗНИКАМИ  НЕТ  НЕСМОТРЯ И НА НАШЕ ПРЕДУПРЕЖДЕНИЯ НЕСМОТРЯ НА НАШИ РАЗГОВОРЫ ПРУВОСЬ БЫ ЧТО-ТАКИ ИНФРАСТРУКТУРА ПОДОШЛА К НАШЕМ ГРАНИЦ ДЕЛО ДОШЛО ДЛО ТОГО ЧТО В ПОЛЬШЕЕ РУМЫНИЯ РАЗМЕЩЕНЫ ТЕПЕРЬ СИСТЕМЫ ПРОТИВ РАКЕТНОЙ ОБОРОНЫ  А ПУСКОВЫЕ УСТАНОВКЕ КОТОРЫЕ ТАМ СТОЯТ М-КОСОРОК ОДИН  НА НИХ МОГУТ БЫТЬ ПОСТАВЛННЫЕ ТАМОГАВКЕ УДАРНОЙ СИСТЕМЫ  НО ЭТО ЖЕ СТОИТ ЛЬНОС УГРОЗЫ  НО ЭТО ЖЕ ОЧЕВИДНОЯ ФАКТ  ОЧЕВИДНЫЙ ВЕЩЬ НА ВСЕ НАШИ УГОВОРЫ  ПРОСЬБЫ НЕ ДЕЛАТЕ ЭТОГО  ЧТО ПРОИЗОШЛО ТО ЧТО МЫ СЕЙЧАС ВИДИМ  В ОТВЕТ МЫ ВЫ НУЖДЕНЫ БЫЛИ ХОЧУТО ПОДЧЕРКНУТЬ ВЫНУЖДЕН БЫЛИ НАЧАТЬ РАЗРАБОТКЕ ГИПЕРЗБУКОВО ОРУЖИЯ  ЭТО НАШ ОТВЕТ  НЕ Ы ЖЕ ЭТО СДЕЛАЛИ  НАЧАЛО  ЗНАЧАЛО НАШИ ПАРТНЕРЫ ВЫШЛИ ИС ДОГОВОРЫ ПОПРОГ ПОТОМ ИЗ ДОГОВОРА ПО РАКЕНУ СРЕДНЕЙ ДАЛЬНОСТЬ  ТЕПЕРЬ В СПРОСИЛИ ПРООКРОВИН ГДЕ ЭТИ КРАСНЫЕ ЛЕНИ  ЭТО ЭТО ПРЕЖДЕ ВСЕГО СОЗДАНИЕ УГРОЗ ДЛЯ НАС КОТОРЫЕ МОГУТ ИСХОДИТЬ С ЭТОЙ ТЕРРИТОРИИ ЕСЛИ И ДАЧУ ВСЕ БУДЕТ РАСШИРЯТЬСЯ В ЭТОЙ ИНФРАСТРУКТУРЫ  ТО Я УЖЕ ПУБЛИЧНО ГОВОРИЛ НО  В ЛЮДИ ДЕЛОВЫ ПОМОЖЕТ БЫТЬ НЕКОТО ЗА ЭТИМ СЛЕДИТЬ НО Я ПОВТОРЮ ЕЩЕ РАЗ НАЧЕТ ЕСЛИ НА ТЕРРИТОРИЯ В УКРАИНА ВОЗНИКНУТ КОМПЛЕКСА КАКИЕ-ТО УДАРНЫЕ  ПОДЛЕТНОЕ ВРЕМЯ ДОМАТСКВЫ БУДЕТ НАЧЕТ ТАМ СЕМЬ ДЕСЯТЬ А В СЛУЧИ РАЗМЕЩЕНИЯ ГИПЕРЗВУКОВО ОРУЖИЕ ПЯТЬ МИНУТ ВОТ ПРЕДЕА'}, {'path': '/Users/cheena/PycharmProjects/leadersofdigital_rbc/tmp/test_0_2.mp3', 'transcription': 'СЕ ВЫ ЧТО ТЫ В МОСКВЕ ЖИВЕТЬ ДА ЭТАК ПОНИМА ИЗ ПИТОЛ МОСКВА ДО  ДО МОРСКВЫ БЫЕТ ПОДЛЕТ НО ВРЕМЯ БДЖЯТЬ БУЖЕМ ХОЧАНСКИ ОТМОСКЕ ПОЧИТСАОЛЯСДЕЛНАДО НО О НАМ ЧТО ДЕЛАТЬ МЫ ТОГДА ДОЛЖНЫ БУДЕМ ЧТО-ТО ПОДОБНОЕ СОЗДАТЬ В ОТНОШЕНИИ ТЕХ КТО НАМ ТАК УГРОЖАЕТПРЕДСТАВЛЯЕТЕЛЬ А МЫ МОЖЕМ ЭТО СДЕЛАТЬ У УЖЕ СЕЙЧАС ПОТОМУ ЧТО МЫ СЕЙЧАС ИСПЫТАЛИ И УСПЕШНО И НАЧАЛА ГОДА У НАС БУЛУТ НА ВООРУЖЕНИ МЕЖДУ НОВОЕ РАКЕТА МОРСКОВОГО БАЗИРОВАНГ ПЕРОЗВУКОВОЕ ДЕВЯТЬ МАХА ПОДВЕТНОЕ ВРЕМЯ БУДЕТ ДО ТЕ КТО ОТДАЕТ ПРИКАЗА ТОЖЕ ПЯТЬ МИНУТ МЫ КУДА ИДЕМ-ТО ЗАЧЕМ ЭТО ВСЁ-ТО ДЕЛО ВОТ ЭТО СОЗДАНИЕ ТАКИХ УГРОЗ ДЛЯ НАС И ЕСТЬ КРАСНЫЕ ЛЕВНИ НО Я НАДЕЮСЬ ЧТО ДО ЭТОГО НЕ ДОЙДЕТ НАДЕЮСЬ ЧТО А ЧУВСТВО ЗДРАВОГО СМЫСЛА ТАК И ОТЪЕТСТВЕННОСТИ И ЗА СВОЕЙ СТРОНЫ ЗАМИРОВОЕ СООБЩЕСТВО ЧТО-ТАКИ БУДЕТ ПРЯ ПРЕОБЛАДАТЬ'}]\n"
+      "МОЩНЫЙ ВЗРЫВ В ЦЕНТРЕ МЮНКИНА ЧЕТЫРЕ ЧЕЛОВЕКА ПОСТРАДАЛИ ОДИН В ТЯЖЕЛОМ СОСТОЯНИИ СДЕТОНИРОВАЛА АБИАБОМБА ВРЕМЁН ВТОРОЙ МИРОВОЙ ВОЙНЫ НАСТРОЙ ПЛОЩАДКЕ НЕДАЛЕКО ОТ ГЛАВНОГО ЖИЗНЬ ДОРОЖНОГО ВОКЗАЛА БАВАРСКОЙ СТОЛИЦЕ ВЕСОМ ДВЕСТИ ПЯТЬДЕСЯТ КИЛОГРАММОВ СТРОИТЕЛЕЙ НАТКНУЛИСЬ НА НЕЁ ВО ВРЕМЯ БУРЕНИЯ ДВИЖЕНИЯ ПОЕЗДУВ В ЭТОМ РАЙОНЕ ПРИОСТАНОВЛЕНА ПОЛИЦИЯ ЦЕПИЛА ТЕРРИТОРИЮ ПОЧЕМУ БУМ БУ НЕТ НАРУЖИЛИ ДО НАЧАЛА РАБОТ СЕЙЧАС ВЫЯСНЯЮТ\n"
      ]
     }
    ],
    "source": [
-    "video_path = 'test_videos/long_test.mp4'\n",
+    "video_path = 'test_videos/test.mp4'\n",
     "\n",
     "with open(video_path, \"rb\") as file:\n",
     "    vid_bytes = file.read()\n",
@@ -87,32 +57,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "309dc76d",
+   "id": "62c1ae8c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = \"\".join([i['transcription'] for i in transcrypt])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "1efa3eaa",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'СЯ ВОЗМОЖНОМО ВОДЕ РОССИЙСКИ КВОЯСНОУКРАИНЫ ГОВОРИЛИ ЕЩЕ В НАЧАЛЕ ГОДА НО И ПРОВОДИЛИ УЧЕНИЯ ЗАПАД ДВАДЦА ОДИН НО КАК ВИДИМ ЭТОГО НЕ СЛУЧИЛОСЬ ДЕЛО НЕ В ТОМ ЧТОБЫ ВВОДИТЬ ТАМ ВОЙСКОНЕ ВВОДИТЬ ВОЕВАТНЕ ВОЕВАТЬ А ДЕЛО В ТОМ ЧТОБЫ НАЛАДИТЬ ОТНОШЕНИЯ П ПО СОЗДАНИЮ М БОЛЕЕ СПРАВЕДЛИВОГО УСТОЙЧИВОГО РАЗВИТИЯ И НА И УЧЕТЫ ИНТЕРЕСАХ В ОБЛАСТИ БЕЗОПАСНОСТИ ВСЕХ УЧАСТНИКОВ МЕЖДУНАРОДНОЙ ДЕЯТЕЛЬНОСТИ ВОТ ЕСЛИ МЫ БУДЕМ ИСКРЕННИК ЭТОМУ СТРЕМИТЬСЯ ТО НИКАКИХ УГРОЗ НИКТО НЕ БУДЕТ ИСПЫТЫВАТЬ ЧТО КАСАЕТСЯ УГРОЗ ТО ДЛЯ ЛЮДЕЙ ПРОЖИВАЮЩИХ В ДВУХ НЕПРИЗНЫХ ПОКА РЕСПУБЛИКАХ ЛОНЫРДАНЫЕ А ТАМ ТОЖЕ ВЕ СОЗДАЮТСЯ ПОСТОЯННОЙ УГРОЗЫ ПРИ ПРИДВИЖЕНИЕ  ВОЙСКОВЫХ СОЕДИНЕНИЕ В БЛИЗИЯ ИХ ТЕРРИТОРИИ ЭТО КАК ВО-ВТОРЫХ  В-ТРЕТЬИХ РОССИЙСКОЙ ФЕДЕРАЦИИ ТАКЖЕ ИСПЫТЫВАЕТ ОПРЕДЕЛЕННЫЕ А ОПРЕДЕЛЕННЫЕ ОЗАБОЧЕННОСТИ СВЯЗИ С ТЕМ ЧТО ВОЗЛЕ ЕЕ ГРАНИЦ ПРОВОЕТСЯ КРУПНОМАСШТАБНОЕ УЧЕНИЕ В ТОМ ЧИСЛЕ НЕЗАПЛАНИРОВАННЫЕ КАК ЭТО БЫЛО СОВСЕМ НЕДАВНО В ЧЕРНОМ МУРЕ КОГДА  В ДВАДЦАТИ КИЛОМЕТРАХ ОТ НАШЕЙ ГРАНИЦЫ НАЛЕТАЛИ СТРАТЕГИЧЕСКИМ БОМАРДИРОВЩИКИ КОТОРЫЕ МОГУТ КАК ИЗВЕСТНО ОБЛАДАТЬЬНОЙ КОТОРЫЕ НА ПОРТУ КОТОРЫХ НАХОДИТСЯ ВЫСОКОТОЧНОЕ ОРУЖИЕ МОЖЕТ НАХОДИТЬСЯ И ЯДЕРНОЕ ОРУЖИЕ ВЕДЬ ЭТО ВСЁ СОДАЮТ УГРОЗУ ДЛЯ НАС ТЕПЕРЬ ПО ПОВОДУ КРАСНЫХ ЛИНИ ОНИ В ИЗВЕСТНО СТЕПЕНИ НОСЯТ УМОЗРИТЕЛЬНОЙ ХАРАКТЕР ТЕМ НЕ МЕНЕЕ ПОСМОТРИТЕ ЧТО ПРОИСХОДИЛ НА ПРОТЯЖЕНИЕ ПРЕДЫДУЩИХ ДВАДЦАТЬИСЛИШНОМ ЛЕТ  ОТНОШЕНИЯ МЕЖДУ РОССИЕЙ И ЗАПАТНЫМ СООБЩЕСТВОМ ТАК КОЛЛЕКТИВНЫМ ЗАПАТОМ В ДЕВЯНОСТЫЕ ГОДЫ НАЧАЛЕ ДВУХ ТЫЧНЫХ БЫЛИ ПРАКТИЧЕСКИ БЕЗОБЛОЧНЫМИ  ЗАЧЕМ ПОТРЕБОВАЛОСЬРАСШИРЯТЬ НАДО К НАШЕМ ГРАНИЦЕ  НУ ЗАЧЕМ  ВОТ КТО МОЖЕТ ОТВЕТИТЬ НА ЭТОТ ВОПРОС  ОТВЕТА ЗДРАВОМ НЕТ НЕ СУЩЕСТВУЮ У НАС БЫЛО ПОЧТИ ИДЕЛИЧЕСКАЯ КАРТИНА ВЗАИМООТНОШЕНИЯ  ОСОБЕННО В СЕРЕДИНИИ ДВЯНАСАТЫХ ГОДУ  МЫ БЫЛИ ПОЧТИСОЮЗНИКАМИ  НЕТ  НЕСМОТРЯ И НА НАШЕ ПРЕДУПРЕЖДЕНИЯ НЕСМОТРЯ НА НАШИ РАЗГОВОРЫ ПРУВОСЬ БЫ ЧТО-ТАКИ ИНФРАСТРУКТУРА ПОДОШЛА К НАШЕМ ГРАНИЦ ДЕЛО ДОШЛО ДЛО ТОГО ЧТО В ПОЛЬШЕЕ РУМЫНИЯ РАЗМЕЩЕНЫ ТЕПЕРЬ СИСТЕМЫ ПРОТИВ РАКЕТНОЙ ОБОРОНЫ  А ПУСКОВЫЕ УСТАНОВКЕ КОТОРЫЕ ТАМ СТОЯТ М-КОСОРОК ОДИН  НА НИХ МОГУТ БЫТЬ ПОСТАВЛННЫЕ ТАМОГАВКЕ УДАРНОЙ СИСТЕМЫ  НО ЭТО ЖЕ СТОИТ ЛЬНОС УГРОЗЫ  НО ЭТО ЖЕ ОЧЕВИДНОЯ ФАКТ  ОЧЕВИДНЫЙ ВЕЩЬ НА ВСЕ НАШИ УГОВОРЫ  ПРОСЬБЫ НЕ ДЕЛАТЕ ЭТОГО  ЧТО ПРОИЗОШЛО ТО ЧТО МЫ СЕЙЧАС ВИДИМ  В ОТВЕТ МЫ ВЫ НУЖДЕНЫ БЫЛИ ХОЧУТО ПОДЧЕРКНУТЬ ВЫНУЖДЕН БЫЛИ НАЧАТЬ РАЗРАБОТКЕ ГИПЕРЗБУКОВО ОРУЖИЯ  ЭТО НАШ ОТВЕТ  НЕ Ы ЖЕ ЭТО СДЕЛАЛИ  НАЧАЛО  ЗНАЧАЛО НАШИ ПАРТНЕРЫ ВЫШЛИ ИС ДОГОВОРЫ ПОПРОГ ПОТОМ ИЗ ДОГОВОРА ПО РАКЕНУ СРЕДНЕЙ ДАЛЬНОСТЬ  ТЕПЕРЬ В СПРОСИЛИ ПРООКРОВИН ГДЕ ЭТИ КРАСНЫЕ ЛЕНИ  ЭТО ЭТО ПРЕЖДЕ ВСЕГО СОЗДАНИЕ УГРОЗ ДЛЯ НАС КОТОРЫЕ МОГУТ ИСХОДИТЬ С ЭТОЙ ТЕРРИТОРИИ ЕСЛИ И ДАЧУ ВСЕ БУДЕТ РАСШИРЯТЬСЯ В ЭТОЙ ИНФРАСТРУКТУРЫ  ТО Я УЖЕ ПУБЛИЧНО ГОВОРИЛ НО  В ЛЮДИ ДЕЛОВЫ ПОМОЖЕТ БЫТЬ НЕКОТО ЗА ЭТИМ СЛЕДИТЬ НО Я ПОВТОРЮ ЕЩЕ РАЗ НАЧЕТ ЕСЛИ НА ТЕРРИТОРИЯ В УКРАИНА ВОЗНИКНУТ КОМПЛЕКСА КАКИЕ-ТО УДАРНЫЕ  ПОДЛЕТНОЕ ВРЕМЯ ДОМАТСКВЫ БУДЕТ НАЧЕТ ТАМ СЕМЬ ДЕСЯТЬ А В СЛУЧИ РАЗМЕЩЕНИЯ ГИПЕРЗВУКОВО ОРУЖИЕ ПЯТЬ МИНУТ ВОТ ПРЕДЕАСЕ ВЫ ЧТО ТЫ В МОСКВЕ ЖИВЕТЬ ДА ЭТАК ПОНИМА ИЗ ПИТОЛ МОСКВА ДО  ДО МОРСКВЫ БЫЕТ ПОДЛЕТ НО ВРЕМЯ БДЖЯТЬ БУЖЕМ ХОЧАНСКИ ОТМОСКЕ ПОЧИТСАОЛЯСДЕЛНАДО НО О НАМ ЧТО ДЕЛАТЬ МЫ ТОГДА ДОЛЖНЫ БУДЕМ ЧТО-ТО ПОДОБНОЕ СОЗДАТЬ В ОТНОШЕНИИ ТЕХ КТО НАМ ТАК УГРОЖАЕТПРЕДСТАВЛЯЕТЕЛЬ А МЫ МОЖЕМ ЭТО СДЕЛАТЬ У УЖЕ СЕЙЧАС ПОТОМУ ЧТО МЫ СЕЙЧАС ИСПЫТАЛИ И УСПЕШНО И НАЧАЛА ГОДА У НАС БУЛУТ НА ВООРУЖЕНИ МЕЖДУ НОВОЕ РАКЕТА МОРСКОВОГО БАЗИРОВАНГ ПЕРОЗВУКОВОЕ ДЕВЯТЬ МАХА ПОДВЕТНОЕ ВРЕМЯ БУДЕТ ДО ТЕ КТО ОТДАЕТ ПРИКАЗА ТОЖЕ ПЯТЬ МИНУТ МЫ КУДА ИДЕМ-ТО ЗАЧЕМ ЭТО ВСЁ-ТО ДЕЛО ВОТ ЭТО СОЗДАНИЕ ТАКИХ УГРОЗ ДЛЯ НАС И ЕСТЬ КРАСНЫЕ ЛЕВНИ НО Я НАДЕЮСЬ ЧТО ДО ЭТОГО НЕ ДОЙДЕТ НАДЕЮСЬ ЧТО А ЧУВСТВО ЗДРАВОГО СМЫСЛА ТАК И ОТЪЕТСТВЕННОСТИ И ЗА СВОЕЙ СТРОНЫ ЗАМИРОВОЕ СООБЩЕСТВО ЧТО-ТАКИ БУДЕТ ПРЯ ПРЕОБЛАДАТЬ'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
+    "text = transcrypt"
    ]
   },
   {
@@ -204,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "3232e238",
    "metadata": {},
    "outputs": [
@@ -212,8 +161,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-12-03 19:30:06.650 INFO in 'deeppavlov.download'['download'] at line 138: Skipped http://files.deeppavlov.ai/deeppavlov_data/error_model.tar.gz download because of matching hashes\n",
-      "2021-12-03 19:31:00.733 INFO in 'deeppavlov.download'['download'] at line 138: Skipped http://files.deeppavlov.ai/lang_models/ru_wiyalen_no_punkt.arpa.binary.gz download because of matching hashes\n",
+      "/usr/local/lib/python3.7/dist-packages/cryptography/hazmat/backends/openssl/x509.py:17: CryptographyDeprecationWarning: This version of cryptography contains a temporary pyOpenSSL fallback path. Upgrade pyOpenSSL now.\n",
+      "  utils.DeprecatedIn35,\n",
+      "2021-12-03 18:30:55.258 INFO in 'deeppavlov.download'['download'] at line 138: Skipped http://files.deeppavlov.ai/lang_models/ru_wiyalen_no_punkt.arpa.binary.gz download because of matching hashes\n",
+      "2021-12-03 18:30:55.844 INFO in 'deeppavlov.download'['download'] at line 138: Skipped http://files.deeppavlov.ai/deeppavlov_data/vocabs/russian_words_vocab.dict.gz download because of matching hashes\n",
       "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n",
       "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
@@ -223,8 +174,7 @@
       "[nltk_data] Downloading package nonbreaking_prefixes to\n",
       "[nltk_data]     /root/nltk_data...\n",
       "[nltk_data]   Package nonbreaking_prefixes is already up-to-date!\n",
-      "2021-12-03 19:31:02.599 INFO in 'deeppavlov.vocabs.typos'['typos'] at line 83: Loading a dictionary from /root/.deeppavlov/downloads/vocabs/russian_words_vocab\n",
-      "2021-12-03 19:31:26.518 INFO in 'deeppavlov.models.spelling_correction.brillmoore.error_model'['error_model'] at line 236: loading error_model from `/root/.deeppavlov/models/error_model/error_model_ru.tsv`\n"
+      "2021-12-03 18:30:57.383 INFO in 'deeppavlov.core.data.simple_vocab'['simple_vocab'] at line 115: [loading vocabulary from /root/.deeppavlov/downloads/vocabs/russian_words_vocab.dict]\n"
      ]
     }
    ],
@@ -238,6 +188,28 @@
     "model = build_model(CONFIG_PATH, download=True)\n",
     "for line in sys.stdin:\n",
     "    print(model([line])[0], flush=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0e7ad9e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting sortedcontainers\n",
+      "  Downloading sortedcontainers-2.4.0-py2.py3-none-any.whl (29 kB)\n",
+      "Installing collected packages: sortedcontainers\n",
+      "Successfully installed sortedcontainers-2.4.0\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install sortedcontainers"
    ]
   },
   {
@@ -318,7 +290,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "f23206ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "cef7cd3c",
    "metadata": {},
    "outputs": [
@@ -326,22 +306,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "мощный взрыв в центре мюнхена четыре человека пострадали один в тяжелом состоянии детонировала авиабомба времён второй мировой войны настрой площадке недалеко от главного жизнь дорожного вокзала баварской столице весом двести пятьдесят килограммов строителей наткнулись на неё во время бурения движения поездов в этом районе приостановлена полиция сцепила территорию почему бум бу нет нарушили до начала работ сейчас выясняют\n"
+      "мощный взрыв в центре мюнкина четыре человека пострадали один в тяжелом состоянии сдетонировала авиабомба времён второй мировой войны настрой площадке недалеко от главного жизнь дорожного вокзала баварской столице весом двести пятьдесят килограммов строителей наткнулись на неё во время бурения движения поездов в этом районе приостановлена полиция оцепила территорию почему бум бу нет нарушили до начала работ сейчас выясняют\n"
      ]
     }
    ],
    "source": [
+    "text = \"МОЩНЫЙ ВЗРЫВ В ЦЕНТРЕ МЮНКИНА ЧЕТЫРЕ ЧЕЛОВЕКА ПОСТРАДАЛИ ОДИН В ТЯЖЕЛОМ СОСТОЯНИИ СДЕТОНИРОВАЛА АБИАБОМБА ВРЕМЁН ВТОРОЙ МИРОВОЙ ВОЙНЫ НАСТРОЙ ПЛОЩАДКЕ НЕДАЛЕКО ОТ ГЛАВНОГО ЖИЗНЬ ДОРОЖНОГО ВОКЗАЛА БАВАРСКОЙ СТОЛИЦЕ ВЕСОМ ДВЕСТИ ПЯТЬДЕСЯТ КИЛОГРАММОВ СТРОИТЕЛЕЙ НАТКНУЛИСЬ НА НЕЁ ВО ВРЕМЯ БУРЕНИЯ ДВИЖЕНИЯ ПОЕЗДУВ В ЭТОМ РАЙОНЕ ПРИОСТАНОВЛЕНА ПОЛИЦИЯ ЦЕПИЛА ТЕРРИТОРИЮ ПОЧЕМУ БУМ БУ НЕТ НАРУЖИЛИ ДО НАЧАЛА РАБОТ СЕЙЧАС ВЫЯСНЯЮТ\"\n",
     "print(model([text])[0], flush=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "3e4e726a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text += \"Munchen big cock\""
    ]
   },
   {
@@ -741,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "939bfa0d",
+   "id": "7d954d9f",
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50b4011d",
+   "id": "ae97655d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -785,7 +756,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
